web/fix: scrollbar when needed

--- a/packages/web/styles/components/container.css
+++ b/packages/web/styles/components/container.css
@@ -1,5 +1,5 @@
 .container {
   width: 100%;
   max-width: rem(1440);
-  overflow: scroll;
+  overflow: auto;
 }
